--- a/index.html
+++ b/index.html
@@ -5,12 +5,325 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>2nd-Exam</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <h1>hi everyone</h1>
+    <main>
+
+        <!-- latest courses -->
+        <section class="container">
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- latest courses -->
+        <section class="container">
+
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- latest courses -->
+        <section class="container">
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- latest courses -->
+        <section class="container">
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <p class="course-author">Amir Hamza Badhon</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star filled"></i>
+                                <i class="fas fa-star emtey"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
