--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -31,12 +34,9 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
@@ -47,7 +47,10 @@
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -55,12 +58,9 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
@@ -71,7 +71,10 @@
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -79,29 +82,26 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- latest courses -->
-        <section class="container">
-
+            <!-- latest courses -->
             <div class="courses">
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-4.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -109,23 +109,23 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-2.png" alt="">
+                        <img src="images/players/player-5.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -133,23 +133,23 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-3.png" alt="">
+                        <img src="images/players/player-6.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -157,28 +157,27 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- latest courses -->
-        <section class="container">
+
+            <!-- latest courses -->
             <div class="courses">
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-7.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -186,23 +185,23 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-2.png" alt="">
+                        <img src="images/players/player-8.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -210,23 +209,23 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-3.png" alt="">
+                        <img src="images/players/player-9.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -234,28 +233,28 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- latest courses -->
-        <section class="container">
+
+            <!-- latest courses -->
+
             <div class="courses">
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-1.png" alt="">
+                        <img src="images/players/player-10.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -263,23 +262,23 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-2.png" alt="">
+                        <img src="images/players/player-11.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -287,23 +286,23 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
                 </div>
                 <div class="course">
                     <div class="course-banner">
-                        <img src="images/players/player-3.png" alt="">
+                        <img src="images/players/player-12.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-title">The compleat Gide for 2020</h3>
-                        <p class="course-author">Amir Hamza Badhon</p>
+                        <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
+                            dolore,
+                            delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
                             <div>
                                 <i class="fas fa-star filled"></i>
@@ -311,12 +310,9 @@
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star filled"></i>
                                 <i class="fas fa-star emtey"></i>
-                                <span>4.5</span>
+
                             </div>
-                            <div class="course-duration">
-                                <i class="far fa-clock"></i>
-                                01:30hr
-                            </div>
+
 
                         </div>
                     </div>
