--- a/index.html
+++ b/index.html
@@ -22,20 +22,13 @@
                         <img src="images/players/player-1.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Neymar Jr.</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -46,20 +39,12 @@
                         <img src="images/players/player-2.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Lionel Messi</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
-
-                            </div>
 
 
                         </div>
@@ -70,20 +55,13 @@
                         <img src="images/players/player-3.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Cristiano Ronaldo</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -97,20 +75,13 @@
                         <img src="images/players/player-4.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Paulo Dybala</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -121,20 +92,13 @@
                         <img src="images/players/player-5.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Mesut Özil</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -145,20 +109,13 @@
                         <img src="images/players/player-6.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Mauro Icardi</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -173,20 +130,12 @@
                         <img src="images/players/player-7.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Di María</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
-
-                            </div>
 
 
                         </div>
@@ -197,20 +146,13 @@
                         <img src="images/players/player-8.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Kylian Mbappé</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -221,20 +163,13 @@
                         <img src="images/players/player-9.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Mohamed Salah</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -250,20 +185,12 @@
                         <img src="images/players/player-10.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Harry Kane</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
-
-                            </div>
 
 
                         </div>
@@ -274,20 +201,13 @@
                         <img src="images/players/player-11.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Kevin De Bruyne</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
@@ -298,20 +218,13 @@
                         <img src="images/players/player-12.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">The compleat Gide for 2020</h3>
+                        <h3 class="course-title">Philippe Coutinho</h3>
                         <p class="course-author">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
                         <div class="course-info">
-                            <div>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star filled"></i>
-                                <i class="fas fa-star emtey"></i>
 
-                            </div>
 
 
                         </div>
