--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -44,10 +40,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -80,11 +73,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -97,11 +86,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -114,11 +99,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
             </div>
@@ -135,10 +116,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -151,11 +129,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -168,11 +142,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
             </div>
@@ -190,10 +160,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -206,11 +173,7 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
                 <div class="course">
@@ -223,14 +186,15 @@
                             Esse voluptatem laborum, doloremque voluptates quos veritatis accusamus officia doloribus
                             dolore,
                             delectus quisquam cum voluptas quo itaque at dignissimos a. Expedita, consectetur?</p>
-                        <div class="course-info">
 
-
-
-                        </div>
                     </div>
                 </div>
             </div>
+            <!-- footer  -->
+
+
+
+
         </section>
     </main>
 </body>
